--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "gh-pages": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
